# job_alerting_system

./: .env.example  .gitignore  README.md  README_VI.md  pyproject.toml  requirements.txt
lambdas/: bot_webhook_handler.py  etl_handler.py  matcher_handler.py  scraper_handler.py
scripts/: deploy_lambdas.py  fetch_lambda_logs.py  local_bot_polling.py  local_pipeline_run.py  setup_aws_resources.py  test_scrapers_live.py
src/: __init__.py  config.py
src/bot/: handler.py
src/common/: aws_clients.py  logger.py  models.py
src/data_quality/: validators.py
src/etl/: deduplicator.py  loader.py  transformer.py
src/matcher/: keyword_matcher.py
src/scrapers/: base_scraper.py  careerlink_scraper.py  careerviet_scraper.py  itviec_scraper.py  jooble_scraper.py  mywork_scraper.py  timviec365_scraper.py  timviecnhanh_scraper.py  vieclam24h_scraper.py  ybox_scraper.py
